echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-server
  labels:
    name: echo-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server
  namespace: echo-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
    spec:
      containers:
        - name: demo-app
          image: dbag34/demo-app:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  namespace: echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-1
  namespace: echo-server
spec:
  type: ClusterIP
  selector:
    app: echo-server
  ports:
    - port: 3000
      targetPort: 3000
