gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-gw
  namespace: echo-server
spec:
  gatewayClassName: istio
  listeners:
  - name: tcp
    protocol: TCP
    port: 3000
